fix truck list collapse transition animation

--- a/sass/_the-trucks.scss
+++ b/sass/_the-trucks.scss
@@ -43,6 +43,11 @@
 	}
 
 	.view-all-trucks {
+
+		.toggle-truck-list:hover {
+			cursor: pointer;
+		}
+
 		h2 {
 			margin-top: 0;
 		}
